# TrafficMonitor-rust

./: Cargo.toml  README.md  build.rs  installer.iss
src/: app.rs  main.rs  tray.rs
src/config/: mod.rs
src/monitor/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs
src/ui/: mod.rs  settings_dialog.rs
src/utils/: mod.rs
