[package]
name = "traffic-monitor"
version = "1.0.0"
edition = "2021"
description = "流量监控 - 网络速度监控工具"
authors = ["lsw"]
license = "GPL-3.0"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.14"
nvml-wrapper = "0.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[[bin]]
name = "traffic-monitor"
path = "src/main.rs"
